Fix layout on mobile for content section

--- a/style.css
+++ b/style.css
@@ -316,4 +316,12 @@ body {
 	.header__actions {
 		grid-area: 3 / 1 / 4 / 3;
 	}
+
+	.content {
+		grid-template-rows: auto 1fr;
+	}
+
+	.content__projects {
+		grid-area: 2 / 1 / 3 / 3;
+	}
 }
